# udacity-dataenginnering-project-3

./: README.md  create_tables.py  dwh.cfg  etl.py  pyproject.toml  sql_queries.py
